added controller and main python modules
