# src/controller.py
@@ -1,0 +1,28 @@
+import psycopg2 as ps
+
+def add_user():
+    return "stuff"
+
+def send_message():
+    return "stuff"
+
+def update_user():
+    return "stuff"
+
+def get_user():
+    return "stuff"
+
+def broadcast_message():
+    return "stuff"
+
+def get_received_messages():
+    return "stuff"
+
+def get_sent_messages():
+    return "stuff"
+
+def get_message():
+    return "stuff"
+
+def delete_message():
+    return "stuff"
