# swagger.yml
@@ -12,7 +12,12 @@ consumes:
 produces:
   - application/json
 
+securityDefinition:
+  basicAuth:
+    type: basic
 
+security:
+  - basicAuth: []
 
 #-------------------------------------------------------------------------------
 # possible paths to use in the restful API
@@ -21,6 +26,7 @@ paths:
   /users:
     post:
       summary: create a new user
+      operationId: controller.add_user
       parameters:
         - in: body
           name: username
@@ -35,6 +41,7 @@ paths:
 
     get:
       summary: return all registered users
+      operationId: controller.get_all_users
       responses:
         200:
           description: Successfully retrieved all users
@@ -54,6 +61,7 @@ paths:
 
     post:
       summary: send a message to a specific user
+      operationId: controller.send_message
       parameters:
         - in: body
           name: message
@@ -70,6 +78,7 @@ paths:
 
     put:
       summary: update username info
+      operationId: controller.update_user
       parameters:
         - in: body
           name: username
@@ -84,6 +93,7 @@ paths:
 
     get:
       summary: return user-id and username
+      operationId: controller.get_user
       responses:
         200:
           description: user info retrieved successfully
@@ -110,6 +120,7 @@ paths:
 
     get:
       summary: return user-id and username
+      operationId: controller.get_user_v2
       responses:
         200:
           description: user info retrieved successfully
@@ -131,6 +142,7 @@ paths:
   /users/all:
     post:
       summary: send a message to all the users
+      operationId: controller.broadcast_message
       parameters:
         - in: body
           name: message
@@ -148,6 +160,7 @@ paths:
   /users/{user_id}/received:
     get:
       summary: retrieve all messages received by given user
+      operationId: controller.get_received_messages
       parameters:
         - in: path 
           name: user_id
@@ -167,6 +180,7 @@ paths:
   /users/{user_id}/sent:
     get:
       summary: retrieve all messages sent by given user
+      operationId: controller.get_sent_messages
       parameters:
         - in: path 
           name: user_id
@@ -193,6 +207,7 @@ paths:
 
     get:
       summary: retrieve a message detail information
+      operationId: controller.get_message
       responses:
         200:
           description: Successfully retrieved message's info
@@ -203,6 +218,7 @@ paths:
 
     delete:
       summary: delete a message (if nobody has read it)
+      operationId: controller.delete_message
       responses:
         200:
           description: Successfully deleted the message
